# librm_lines

./: .gitignore  AlternativeFonts.cmake  CMakeLists.txt  README.md  flake.nix  requirements.txt
.github/workflows/: build-web.yml  build.yml
docs/explanation/: Why .rm file v6 was introduced.md
docs/reference/: reMarkable .rm file format  reMarkable .rm file format.md
headers/: library.h  reader.h  v6_reader.h
headers/common/: blocks.h  crdt_sequence_item.h  data_types.h  scene_items.h  scene_tree.h
headers/reader/: tagged_block_reader.h
headers/v5/: reader.h  tag_blocks.h
headers/v6/: reader.h  tag_blocks.h
rm_lines/headers/: library.h  rm_lines.h
rm_lines/headers/advanced/: document_size_tracker.h  layer_info.h  layers.h  line_info.h  math.h  rect.h  text.h  text_helpers.h  text_scale.h  text_sequence.h
rm_lines/headers/common/: blocks.h  crdt_sequence_item.h  data_types.h  scene_items.h  scene_tree.h
rm_lines/headers/reader/: analyzer.h  tagged_block_reader.h
rm_lines/headers/renderer/: image_ref.h  image_renderer.h  imagebuffer.h  renderer.h  renderer_export.h  text_renderer.h
rm_lines/headers/renderer/rm_lines_renderer/: imagebuffer.h  rm_lines_renderer.h
rm_lines/headers/renderer/rm_lines_stroker/: imagebuffer.h  line.h  rm_lines_stroker.h  stroker.h  stroker_impl.h  varying.h
rm_lines/headers/renderer/rm_lines_stroker/raster/: clipped.h  clipped_impl.h  lerp.h  mono.h
rm_lines/headers/renderer/rm_lines_stroker/rm_pens/: colors.h  pen.h  pen_functions.h  rm_pen_fill.h
rm_lines/headers/renderer/rm_lines_stroker/templates/: template_functions.h
rm_lines/headers/renderer/text/: font_manager.h  text_renderer.h
rm_lines/headers/scene_tree/: scene_tree.h  scene_tree_editor.h  scene_tree_export.h
rm_lines/headers/stb/: stb_perlin.h
rm_lines/headers/stb_truetype/: stb_truetype.h
rm_lines/headers/v5/: reader.h
rm_lines/headers/v6/: reader.h
rm_lines/headers/writer/: tagged_block_writer.h
rm_lines/src/: library.cpp  reader.cpp  rm_lines.cpp  wasm_entry.cpp
rm_lines/src/advanced/: text.cpp  text_scales.cpp  text_sequence.cpp
rm_lines/src/common/: blocks.cpp  crdt_sequence_item.cpp  data_types.cpp  scene_items.cpp  scene_tree.cpp
rm_lines/src/reader/: analyzer.cpp  tagged_block_reader.cpp
rm_lines/src/renderer/: image_ref.cpp  image_renderer.cpp  imagebuffer.cpp  renderer.cpp  renderer_export.cpp  text_renderer.cpp
rm_lines/src/renderer/rm_lines_renderer/: imagebuffer.cpp
rm_lines/src/renderer/rm_lines_stroker/: imagebuffer.cpp  line.cpp  stroker.cpp  varying.cpp
rm_lines/src/renderer/rm_lines_stroker/raster/: clipped.cpp  lerp.cpp  mono.cpp
rm_lines/src/renderer/rm_lines_stroker/rm_pens/: ballpoint_pen.cpp  basic_pen.cpp  debug_pen.cpp  highlighter_pen.cpp  marker_pen.cpp  pencil_pen.cpp  rm_pen_fill.cpp  shader_pen.cpp  template_pen.cpp
rm_lines/src/renderer/rm_lines_stroker/templates/: blank.cpp  grid_base.cpp
rm_lines/src/renderer/text/: font_manager.cpp  text_renderer.cpp
rm_lines/src/scene_tree/: scene_tree.cpp  scene_tree_editor.cpp  scene_tree_export.cpp
rm_lines/src/stb/: stb_perlin.cpp  stb_truetype.cpp
rm_lines/src/stb_truetype/: stb_truetype.cpp
rm_lines/src/v5/: reader.cpp
rm_lines/src/v6/: reader.cpp
rm_lines/src/writer/: tagged_block_writer.cpp
rm_lines_sys/: README.md  build.py  pyproject.toml
rm_lines_sys/src/rm_lines_sys/: __init__.py
rm_lines_wasm_sys/: README.md  build.sh  index.js  package-lock.json  package.json
src/: library.cpp  reader.cpp  v6_reader.cpp
src/common/: blocks.cpp  crdt_sequence_item.cpp  data_types.cpp  scene_items.cpp  scene_tree.cpp
src/reader/: tagged_block_reader.cpp
src/v5/: reader.cpp
src/v6/: reader.cpp
tests/: draw_test.py  image_vertices_creator.py  index.html  interactive_test.py  requirements.txt  rm_lines_test.js  test.cpp  test.py  test_concurent.py  test_writes.cpp  tests_base.py  text_expand.py
tests/color_files/: Ballpoint v2 all colors.rm  Ballpoint v2 black.rm  Ballpoint v2 blue.rm  Ballpoint v2 cyan.rm  Ballpoint v2 green.rm  Ballpoint v2 magenta.rm  Ballpoint v2 red.rm  Ballpoint v2 yellow.rm
tests/draw_files/: 001 Ballpoint Pen strip test.rm  001 Ballpoint pen.rm  002 Fineliner.rm  003 Pencil swish test.rm  003 Pencil.rm  004 Mechanical pencil soft test.rm  004 Mechanical pencil.rm  005 Highlighter test overlap.rm  005 Highlighter.rm  006 Marker.rm  007 Brush.rm  008 Callighraphy pen.rm  2025-01-16_113353.rm  Cat draw test 2.rm  Highlighter blend test.rm  Landscape.rm  Overlap test.rm  Page block down test.rm  Page block horizontal test.rm  Page block left test.rm  Page block right test.rm  Page block up test.rm  Page cross test.rm  Page cube vertical test.rm  Page down test.rm  Page horizontal test.rm  Page left test.rm  Page plus test.rm  Page right test.rm  Page vertical test.rm  RMPP new pens and colors.rm  Scaling landscape.rm  Test designs.rm  Test, all tools.rm  Tight fit.rm  all tools & colors.rm  colors 3.rm  test rmpp  highlighter.rm  test rmpp edges.rm
tests/files/: 002 Test methods.rm  005 Test methods.rm  006 Test new text styles.rm  007 Test new text styles.rm  008 Test new text styles.rm  009 New text style combo test.rm  Bugged File.rm  Capture tool.rm  Got_Lines.rm  Layers.rm  Test Calligraphy stroke.rm  Test Images.rm  Test Images_2.rm  Test Images_3.rm  Test OOB.rm  Test deleted text.rm  Test direction.rm  Test glyph.rm  Test methods.rm  Test single rectangle.rm  Test strokes.rm  Test tomb para.rm  Test tomb.rm  Text Move medium.rm  Text Move narrow.rm  Text Move wide.rm  Text Title-Sub from tablet.rm  Text combos.rm  Text fit medium.rm  Text fit narrow.rm  Text fit wide.rm  Text layout bullet.rm  Text layout checkbox.rm  Text layout header.rm  Text layout numbered.rm  Text layout plain.rm  Text layout sub.rm  Text test align.rm  Weird text.rm
tools/: convert_fonts.py  download_remarkable_fonts.sh  find_exports.py  generate_style_scales.py  pdf_fonts.py  split_variable_font.py  utf_bomb.py
