[project]
name = "rm_lines_sys"
version = "0.0.0+replaced-by-ci"
description = "This project holds the dynamic library and bindings for python."
authors = [
    { name = "RedTTG", email = "red@redttg.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [

]


[tool.poetry]
packages = [{ include = "rm_lines_sys", from = "src" }]
include = [
    { path = "src/rm_lines_sys/*.dll", format = ["wheel", "sdist"] },
    { path = "src/rm_lines_sys/*.so", format = ["wheel", "sdist"] },
    { path = "src/rm_lines_sys/*.dylib", format = ["wheel", "sdist"] }
]
build = "build.py"

[build-system]
requires = ["setuptools", "poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
